--- a/code/mean_tas_weighting.Rmd
+++ b/code/mean_tas_weighting.Rmd
@@ -55,6 +55,8 @@ mods.historical = extractModelnames(fn.historical, startstring = 'tas_Amon_',
 # Find models common to historical and future projection
 common.mods = intersect(mods.ssp585, mods.historical)
 
+nmods = length(common.mods)
+
 fn.ssp585.kept = fn.ssp585[match(common.mods, mods.ssp585)]
 fn.historical.kept = fn.historical[ match(common.mods, mods.historical)]
 
@@ -220,16 +222,15 @@ legend('topright', legend = 'D_q', text.col = 'red', bty = 'n')
 d_ij = dist(varmat.anom, upper = TRUE, diag = TRUE)
 d_ij.matrix = as.matrix(d_ij)
 
-
 d_ij.formatted = apply(d_ij.matrix, 2, rev)
 
 # I think this is the right way round.
 #dev.new(width = 10, height = 10)
 options(repr.plot.width = 10, repr.plot.height = 10)
 par(mar = c(8,8,3,3))
-image.plot(1:26, 1:26,t(d_ij.formatted), axes = FALSE, xlab = '', ylab = '')
-axis(2, at = 26:1, labels = common.mods, las = 1)
-axis(1, at = 1:26, labels = common.mods, las = 2)
+image.plot(1:nmods, 1:nmods,t(d_ij.formatted), axes = FALSE, xlab = '', ylab = '')
+axis(2, at = nmods:1, labels = common.mods, las = 1)
+axis(1, at = 1:nmods, labels = common.mods, las = 2)
 
 # D_u is the radius of similarity
 D_u = 0.5#* min.rmse
@@ -288,8 +289,6 @@ legend('topleft', pch = 19, legend = c('w_q','w_u','w.raw', 'w') , col = c('blac
 ```{r}
 # Apply the weighting by sampling from the distribution of models, weighted
 # according to w
-
-nmods = nrow(varmat)
 
 # create index by which we sample the model matrix
 n = 10000
